kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    certmanager.k8s.io/acme-challenge-type: http01
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

  labels:
    app: frontend
  name: frontend

spec:
  rules:
    - host: shop.34.78.246.165.nip.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - shop.34.78.246.165.nip.io
      secretName: shop-tls
